# cpp-raiigl

./: .gitignore  AUTHOR  CMakeLists.txt  README.md  just-hello.cpp
CMakeModules/: CMakeCustomModules.cmake  FindRAIIGL.cmake
include/raiigl/: --out-uniform_variable_multiple.hpp  buffer.hpp  buffer_ssbo.hpp  buffer_ubo.hpp  debug.hpp  gl200.hpp  gl300.hpp  gl310.hpp  gl320.hpp  gl330.hpp  gl420.hpp  gl430.hpp  gl_context.hpp  gl_types.hpp  ostream.hpp  program.hpp  shader.hpp  texture.hpp  types.hpp  uniform_variable.hpp  uniform_variable_multiple.hpp  vertex_array.hpp
include/raiigl/classes/: forceinline.hpp  non_copyable.hpp  non_copyable_movable.hpp
include/raiigl/conceptual/: index_manager.hpp
include/raiigl/ipp/: program.ipp  shader.ipp
src/: buffer.cpp  buffer_ubo.cpp  program.cpp
